plugins {
    id "java"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

tasks.named('processResources') {
    filesMatching('plugin.json') {
        expand(
                mcVersion: mcVersion,
                mcreatorVersion: mcreatorVersion,
                pluginVersion: pluginVersion,
                supportedVersion: {
                    def p = mcreatorVersion.split("\\.")
                    p[0] + p[1].padLeft(3, '0')
                }()
        )
    }
}

tasks.jar {
    archiveFileName.set("generator-${mcVersion}-${pluginVersion}-${mcreatorVersion}.zip")
}

tasks.register('runMCreatorWithPlugin', JavaExec) {
    dependsOn(processResources, jar)

    environment("MCREATOR_PLUGINS_FOLDER", file("./build/libs"))

    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'

    classpath = project(':MCreator').sourceSets.main.runtimeClasspath

    mainClass = 'net.mcreator.Launcher'

    workingDir = mcreator_path
}

subprojects { subproject ->
    subproject.plugins.withType(JavaPlugin).tap {
        configureEach {
            test {
                useJUnitPlatform()
                include '**/GeneratorsTest.class'

                dependsOn rootProject.processResources
                dependsOn rootProject.jar

                environment("MCREATOR_PLUGINS_FOLDER", new File(rootProject.projectDir, "/build/libs"))
                environment("MCREATOR_TEST_GENERATORS", "forge-${mcVersion}, datapack-1.16.x, resourcepack-${mcVersion}")

                workingDir = mcreator_path
            }
        }
    }
}